examples/errors/binding-useunused.sem
system Syntax => Syntax

rule UseUnused
----------
<_a> => <_a>

